@@ -2,3 +2,4 @@
 files
 *.substvars
 workout
+*.log
